# oneco

./: .dockerignore  .env.example  .env.production.example  .gcloudignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  PRODUCTION_CHECKLIST.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml  run_server.py  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: takedown-request.yml
.github/workflows/: auto-fix-adapter.yml  auto-merge-fix-pr.yml  backend.yml  data-collector.yml  deploy-backend.yml  frontend.yml  secret-health.yml  sns-publish.yml  uptime-check.yml
.kiro/research/: image_persistence_dedupe_roadmap.md  nationwide_shelter_sites.md
.kiro/steering/: product.md  roadmap.md  structure.md  tech.md
.playwright-mcp/: page-2026-05-08T02-22-36-498Z.yml  page-2026-05-08T02-44-18-318Z.yml  page-2026-05-08T02-44-35-060Z.yml  page-2026-05-08T02-45-20-537Z.yml  page-2026-05-08T02-45-45-646Z.yml  page-2026-05-08T05-30-02-189Z.yml  page-2026-05-08T05-49-49-169Z.yml  page-2026-05-08T05-50-14-912Z.yml  page-2026-05-08T05-52-35-967Z.yml  page-2026-05-08T05-53-01-536Z.yml  page-2026-05-08T05-53-17-059Z.yml  page-2026-05-08T06-04-50-665Z.yml  page-2026-05-08T06-05-10-244Z.yml  page-2026-05-08T06-05-23-636Z.yml  page-2026-05-08T06-08-42-216Z.yml  page-2026-05-08T06-29-10-123Z.yml
alembic/: env.py
alembic/versions/: 33c0ccd7c108_create_animals_table.py  6134989ff064_add_category_column_to_animals.py  7a8b9c0d1e2f_create_notification_manager_tables.py  8a9b0c1d2e3f_add_animal_repository_schema.py  9b1c2d3e4f5a_add_prefecture_to_animals.py  a0b1c2d3e4f5_enable_rls_supabase_security.py  a7b8c9d0e1f2_add_source_site.py  b1c2d3e4f5a6_revoke_anon_write_permissions.py  b8c9d0e1f2a3_add_identity_fields_to_animals.py  c2d3e4f5a6b7_disable_graphql_exposure.py  c9d0e1f2a3b4_add_identity_fields_to_archive.py  d0e1f2a3b4c5_backfill_null_prefecture.py  d3e4f5a6b7c8_revoke_anon_select_use_cloud_run_only.py  e4f5a6b7c8d9_revoke_usage_from_public_role.py  f1a2b3c4d5e6_add_last_seen_at.py
data/: broken_sites.yaml  field_quality_drift.yaml  site_baselines.yaml  sns_posts.yaml
docs/: RELEASE-2026-05.md  RUNBOOK.md
docs/codex-prompts/: ogp-redesign.md
docs/sns-launch/: account-setup-checklist.md  profiles.md  threads-app-review.md  x-for-good-application.md
docs/templates/: notify-municipal.md  notify-rescue-org.md
docs/wiki/: 01-architecture.md  02-data-flow.md  03-adapters.md  04-self-healing.md  05-database.md  06-api.md  07-frontend.md  08-syndication-sns.md  09-workflows.md  10-monitoring.md  11-development.md  README.md
frontend/: .env.local.example  README.md  auth.ts  lighthouserc.json  next.config.test.ts  next.config.ts  package-lock.json  package.json  proxy.ts  vercel.json  vitest.config.ts  vitest.server-only.ts  vitest.setup.ts
frontend/app/: actions.ts  error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  seo.test.ts  sitemap.ts
frontend/data/: transparency-sites.json
frontend/e2e/: accessibility.spec.ts
frontend/lib/: admin.test.ts  admin.ts  (+23 more)
output/: animals.json
reports/: zero_audit_20260519.md  zero_audit_final_20260520.md
scripts/: adapter_live_test.py  auto_fix_adapter.py  finalize-release.sh  generate_transparency_sites.py  poc_selector_gen.py  template_analysis_2026-05-15.md  zero_count_audit.py
snapshots/: latest.json
tests/: conftest.py  test_admin_sites.py  test_admin_stats.py  test_animal_model.py  test_animal_repository.py  test_api_routes.py  test_api_schemas.py  test_database_connection.py  test_dependencies.py  test_e2e.py  test_error_handlers.py  test_fastapi_app.py  test_health_check.py  test_image_remote_patterns.py  test_logging.py  test_main.py  test_main_routing.py  test_migration.py  test_openapi_docs.py  test_performance.py  test_prefecture_backfill.py  test_public_stats.py  test_robots_check.py  test_run_summary_alert.py  test_site_timeout_resolution.py  test_trigger_auto_fix.py
(+588 files in other folders)
