[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-collector"
version = "0.1.0"
description = "自治体サイトから保護動物情報を収集・正規化するデータ収集エンジン"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.11.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "playwright>=1.40.0",
    "pdfplumber>=0.10.0",
    "python-dotenv>=1.0.0",
    # 配信API(syndication)のランタイム依存。requirements.txt には存在したが
    # Dockerfile が `pip install -e .`(pyproject 単一源泉)へ移行した際に未同期で、
    # 本番イメージから欠落していた (slowapi 欠落で 2026-06-15 デプロイがクラッシュ)。
    "feedgen>=1.0.0",          # RSS/Atom フィード生成 (feed_generator)
    "redis[asyncio]>=5.0.0",   # レート制限/キャッシュ (rate_limiter, cache_manager)
    "slowapi>=0.1.9",          # 公開API レート制限 (app.py)
    "numpy>=1.24.0",           # 公開メトリクス集計 (metrics_collector)
]

[tool.setuptools]
packages = ["data_collector"]
package-dir = {"" = "src"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0,<2.0",  # メジャー更新の挙動変更で CI が割れたため上限固定
    "httpx>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/data_collector"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
